portfolio section is done

--- a/index.html
+++ b/index.html
@@ -119,41 +119,37 @@
             <div class="row">
               <div class="col-md-12 col-lg-8">
                 <h2 class="heading">Portfolio</h2>
-                <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                <p>These are some of my pieces that I am quite proud of.  They showcase a range of CSS, JavaScript, HTML, React and Redux</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a></div>
+                <div class="box"><a href="https://why-boxes.netlify.com"><img class="size" src="img/boxes.jpg" alt="image" class="img-fluid"></a></div>
+                <figcaption>This image connects you to a site titled "Why boxes?". It showcases HTML,CSS and Flex. My code can be found <a href="https://github.com/Samantha-Reis/Sprint-Challenge--User-Interface">here!</a></figcaption>
               </div>
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-2.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-2.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
+                <div class="box"><a href="https://sleeptracker18.netlify.com"><img class="size" src="img/sleeping.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site titled "SleepTracker"  We did it as a build so that people can track their sleep patterns and it will tell the user how much sleep they should be getting so that they have a great day! It showcases HTML,CSS and use of templates. My code can be found <a href="https://github.com/Samantha-Reis/sleeptracker">here!</a></figcaption>
+                </div>
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-3.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-3.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
+                <div class="box"><a href="https://medicationclassification.netlify.com"><img class="size" src="img/medication.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site I did for the corporation CVS.  It is used by some of the technicians in their determinations department to decide if a medication is brand or generic. It showcases JavaScript, API calls and React.
+                </div>
             </div>
             <div class="row">
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-4.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-4.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
+                <div class="box"><a href="https://smurfy.netlify.com"><img class="size" src="img/smurfy.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site titled "Smurfy".  With this app you input a name, height and age and it will make a card for the smurf you have named. It showcases JavaScript, React and Redux . My code can be found <a href="https://github.com/Samantha-Reis/smurf-portfolio">here!</a></figcaption>
+                </div>
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-5.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-5.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
+                <div class="box"><a href="https://spacewalkers-portfolio.netlify.com"><img  class="size"src="img/spacewalk.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site titled "Spacewalkers". It showcases HTML,CSS and flex. My code can be found <a href="https://github.com/Samantha-Reis/Sprint-Challenge--Advanced-CSS/tree/Samantha-Hunsberger">here!</a></figcaption>
+                </div>
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-6.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
+                <div class="box"><a href="https://war-on-react.netlify.com"><img class="size" src="img/war-on-react.jpg" alt="image" class="img-fluid"></div>
+                  <figcaption>This image connects you to a site titled "War on React". It showcases JavaScript, React, and API calls. My code can be found <a href="https://github.com/Samantha-Reis/war-on-react">here!</a></figcaption>
+                </div>
             </div>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-7.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-7.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-8.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-8.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-9.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-9.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
             </div>
           </div>
         </div>
@@ -174,13 +170,13 @@
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
-                          <label for="name">Your firstname *</label>
+                          <label for="name">Your first name *</label>
                           <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
                         </div>
                       </div>
                       <div class="col-md-6">
                         <div class="form-group">
-                          <label for="surname">Your lastname *</label>
+                          <label for="surname">Your last name *</label>
                           <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
                         </div>
                       </div>
@@ -201,7 +197,7 @@
               <div class="col-lg-6">
                 <a href="mailto:reissamantha19@gmail.com" class="email"><i class="fa fa-envelope"></i></a>
                   <a href="https://github.com/Samantha-Reis">
-                    <img src="/img/GitHub-Mark-32px.png" alt="image" class="img-fluid">
+                    <img src="/portfolio-of-wonders/img/GitHub-Mark-32px.png" alt="image" class="img-fluid">
                   </a>
               </div>
             </div>
