--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
+
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <!-- Font Awesome CSS-->
+
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <!-- Google fonts - Montserrat for headings, Cardo for copy-->
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
-    <!-- Lightbox-->
+
     <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
-    <!-- theme stylesheet-->
-    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="css/custom.css">
+
+    <link rel="stylesheet" href="/portfolio-of-wonders/style.default.css" id="theme-stylesheet">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
     <!-- Leaflet CSS - For the map-->
