--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <div class="col-lg-6">
                 <a href="mailto:reissamantha19@gmail.com" class="email"><i class="fa fa-envelope"></i></a>
                   <a href="https://github.com/Samantha-Reis">
-                    <img src="/portfolio-of-wonders/img/GitHub-Mark-32px.png" alt="image" class="img-fluid">
+                    <img src="/img/GitHub-Mark-32px.png" alt="image" class="img-fluid">
                   </a>
               </div>
             </div>
