--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
 
-    <link rel="stylesheet" href="/portfolio-of-wonders/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="/style.default.css" id="theme-stylesheet">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
     <!-- Leaflet CSS - For the map-->
