--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
     <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
 
     <link rel="stylesheet" href="/style.default.css" id="theme-stylesheet">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon.png">
-    <!-- Leaflet CSS - For the map-->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+
   </head>
   <body>
     <section id="intro" class="intro">       
@@ -82,7 +78,7 @@
     </section>
     <!-- about end-->
     <!-- Services-->
-    <section id="services" style="background-color: #eee">
+    <section id="services" style="background-color: whitesmoke;">
       <div class="container">
         <div class="row services">
           <div class="col-lg-12">
@@ -110,7 +106,7 @@
     <!-- Services end-->
     
     <!-- Portfolio / gallery-->
-    <section id="portfolio" class="gallery">
+    <section id="portfolio" class="gallery" style="background-color: #f0f0f0;">
       <div class="container clearfix">
         <div class="row">
           <div class="col-lg-12">
@@ -156,7 +152,7 @@
     <!-- Portfolio / gallery end-->
 
     <!-- contact-->
-    <section id="contact" style="background-color: #fff;" class="text-page pb-4"> 
+    <section id="contact" style="background-image: radial-gradient(lightgray, #eee);" class="text-page pb-4"> 
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
