--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-lg-8 col-md-12 mx-auto">
               <p class="italic">Oh, hello, nice to meet you!</p>
               <h1>I am Samantha Reis.</h1>
-              <p class="italic">Welcome to my portfolio.</p>
+              <p class="italic">Welcome to my Web Development Portfolio!</p>
             </div>
           </div>
         </div>
@@ -45,15 +45,58 @@
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Home</a></li>
+              <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Portfolio</a></li>
               <li class="nav-item"><a href="#about" class="nav-link link-scroll">About </a></li>
               <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
-              <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Portfolio</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
+
+    <!-- Portfolio / gallery-->
+    <section id="portfolio" class="gallery" style="background-color: #f0f0f0;">
+      <div class="container clearfix">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row">
+              <div class="col-md-12 col-lg-8">
+                <h2 class="heading">Portfolio</h2>
+                <p>These are some of my pieces that I am quite proud of.  They showcase a range of CSS, JavaScript, HTML, React and Redux.  If you click the images it will take you to the website.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="box"><a href="https://why-boxes.netlify.com"><img class="size" src="img/boxes.jpg" alt="image" class="img-fluid"></a></div>
+                <figcaption>This image connects you to a site titled "Why boxes?". It showcases HTML,CSS and Flex. My code can be found <div class="link"><a href="https://github.com/Samantha-Reis/Sprint-Challenge--User-Interface">Here!</a></div></figcaption>
+              </div>
+              <div class="col-md-4">
+                <div class="box"><a href="https://sleeptracker18.netlify.com"><img class="size" src="img/sleeping.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site titled "SleepTracker"  I did it as a build so that people can track their sleep patterns and it will tell the user how much sleep they should be getting so that they have a great day! It showcases HTML,CSS and use of templates. My code can be found <div class="link"><a href="https://github.com/Samantha-Reis/sleeptracker">Here!</a></div></figcaption>
+                </div>
+              <div class="col-md-4">
+                <div class="box"><a href="https://medicationclassification.netlify.com"><img class="size" src="img/medication.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site I did for the corporation CVS.  It is used by some of the technicians in their determinations department to decide if a medication is brand or generic. It showcases JavaScript, API calls and React.
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="box"><a href="https://spacewalkers-portfolio.netlify.com"><img  class="size"src="img/spacewalk.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site titled "Spacewalkers". It showcases HTML,CSS and flex. My code can be found <div class="link"><a href="https://github.com/Samantha-Reis/Sprint-Challenge--Advanced-CSS/tree/Samantha-Hunsberger">Here!</a></div></figcaption>
+                </div>
+              <div class="col-md-4">
+                <div class="box"><a href="https://war-on-react.netlify.com"><img class="size" src="img/war-on-react.jpg" alt="image" class="img-fluid"></a></div>
+                  <figcaption>This image connects you to a site tiled "War on React".  It showcases CSS, React, API calls.  My code can be found <div class="link"><a href= "https://github.com/Samantha-Reis/war-on-react">Here!</a></div></figcaption>
+                </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Portfolio / gallery end-->
+
     <!-- about-->
     <section id="about" class="text">
       <div class="container">
@@ -71,7 +114,7 @@
             <p>To me, full-stack web development is a perfectly balanced dish. It blends my unique and burning passions for mathematics, design, and problem-solving. I view each and every project the same way I approach cooking a meal. As I continue my education through Lambda School, I add more "ingredients" into my pantry, and find excitement in combining those ingredients to create customized solutions to the problems proposed to me. Coding is a science. It combines an intense mastery of computing logic and a willingness and discipline to follow the scientific method. Coding is also an art. It requires a person to think freely and to be willing to explore outside the confines of conventional approaches. To me, coding and cooking go hand in hand.</p>
           </div>
           <div class="col-lg-5 mx-auto">
-            <p><img src="img/me.jpg" alt="me" class="img-fluid rounded-circle"></p>
+            <p><img src="img/34585796_10216643616422147_3381550094284226560_n.jpg" alt="me" class="img-fluid rounded-circle"></p>
           </div>
         </div>
       </div>
@@ -104,59 +147,14 @@
       </div>
     </section>
     <!-- Services end-->
-    
-    <!-- Portfolio / gallery-->
-    <section id="portfolio" class="gallery" style="background-color: #f0f0f0;">
-      <div class="container clearfix">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="row">
-              <div class="col-md-12 col-lg-8">
-                <h2 class="heading">Portfolio</h2>
-                <p>These are some of my pieces that I am quite proud of.  They showcase a range of CSS, JavaScript, HTML, React and Redux</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="box"><a href="https://why-boxes.netlify.com"><img class="size" src="img/boxes.jpg" alt="image" class="img-fluid"></a></div>
-                <figcaption>This image connects you to a site titled "Why boxes?". It showcases HTML,CSS and Flex. My code can be found <a href="https://github.com/Samantha-Reis/Sprint-Challenge--User-Interface">here!</a></figcaption>
-              </div>
-              <div class="col-md-4">
-                <div class="box"><a href="https://sleeptracker18.netlify.com"><img class="size" src="img/sleeping.jpg" alt="image" class="img-fluid"></a></div>
-                  <figcaption>This image connects you to a site titled "SleepTracker"  We did it as a build so that people can track their sleep patterns and it will tell the user how much sleep they should be getting so that they have a great day! It showcases HTML,CSS and use of templates. My code can be found <a href="https://github.com/Samantha-Reis/sleeptracker">here!</a></figcaption>
-                </div>
-              <div class="col-md-4">
-                <div class="box"><a href="https://medicationclassification.netlify.com"><img class="size" src="img/medication.jpg" alt="image" class="img-fluid"></a></div>
-                  <figcaption>This image connects you to a site I did for the corporation CVS.  It is used by some of the technicians in their determinations department to decide if a medication is brand or generic. It showcases JavaScript, API calls and React.
-                </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="box"><a href="https://smurfy.netlify.com"><img class="size" src="img/smurfy.jpg" alt="image" class="img-fluid"></a></div>
-                  <figcaption>This image connects you to a site titled "Smurfy".  With this app you input a name, height and age and it will make a card for the smurf you have named. It showcases JavaScript, React and Redux . My code can be found <a href="https://github.com/Samantha-Reis/smurf-portfolio">here!</a></figcaption>
-                </div>
-              <div class="col-md-4">
-                <div class="box"><a href="https://spacewalkers-portfolio.netlify.com"><img  class="size"src="img/spacewalk.jpg" alt="image" class="img-fluid"></a></div>
-                  <figcaption>This image connects you to a site titled "Spacewalkers". It showcases HTML,CSS and flex. My code can be found <a href="https://github.com/Samantha-Reis/Sprint-Challenge--Advanced-CSS/tree/Samantha-Hunsberger">here!</a></figcaption>
-                </div>
-              <div class="col-md-4">
-                <div class="box"><a href="https://war-on-react.netlify.com"><img class="size" src="img/war-on-react.jpg" alt="image" class="img-fluid"></div>
-                  <figcaption>This image connects you to a site titled "War on React". It showcases JavaScript, React, and API calls. My code can be found <a href="https://github.com/Samantha-Reis/war-on-react">here!</a></figcaption>
-                </div>
-            </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Portfolio / gallery end-->
+  
 
     <!-- contact-->
     <section id="contact" style="background-image: radial-gradient(lightgray, #eee);" class="text-page pb-4"> 
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="heading">Contact</h2>
+            <h2 class="heading">Contact Me</h2>
             <div class="row">
               <div class="col-lg-6">
                 <form id="contact-form" form name="contactform" method="POST" data-netlify="true">
@@ -180,7 +178,7 @@
                       <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
                     </div>
                     <div class="form-group">
-                      <label for="surname">Your message for us *</label>
+                      <label for="surname">Your message *</label>
                       <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
                     </div>
                     <div class="text-center">
@@ -189,10 +187,11 @@
                   </div>
                 </form>
               <div class="col-lg-6">
+                <a href="https://github.com/Samantha-Reis">
+                  <img src="/img/GitHub-Mark-32px.png" alt="image" class="img-fluid">
+                </a>
                 <a href="mailto:reissamantha19@gmail.com" class="email"><i class="fa fa-envelope"></i></a>
-                  <a href="https://github.com/Samantha-Reis">
-                    <img src="/img/GitHub-Mark-32px.png" alt="image" class="img-fluid">
-                  </a>
+                  <a href="https://www.linkedin.com/in/samantha-reis-555a49197/" class="linked"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
